--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -45,22 +45,60 @@
  <p>run out of stock soon</p>
 -->
 
-<div class="card clearfix" data-score="75" data-price="17.50">
+<div class="card clearfix" data-score="70" data-price="27.00">
   <div class="image_box">
-    <a target="_blank" href="https://amzn.to/2y6gOgj"><img src="https://m.media-amazon.com/images/I/71m3cMVGK3L._SR400,400_.jpg" alt="BAG WIZARD...Satchel Handbag" /></a>
-    <div class="rating"><img src="<%= asset_path 'star-3.jpg' %>"><p>7 Amazon Reviews</p></div>
+    <a target="_blank" href="https://amzn.to/2JXohDU"><img src="https://m.media-amazon.com/images/I/51oTMkfJUCL._SR400,400_.jpg" alt="Elzle 25000mAh Quick Charger Power Bank" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>6 Amazon Reviews</p></div>
   </div>
   <div class="inner inner_top">
-    <span class="regular"><em>75% OFF</em> + free shipping</span>
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2y6gOgj">BAG WIZARD Medium Pebbled Leather Satchel Handbag Purse for Women</a></p>
+    <p><a target="_blank" href="https://amzn.to/2JXohDU">Elzle 25000mAh Quick Charger Power Bank, Ultra Fast Charger 5V/5A with Dual Input(Type-C and Micro USB),...</a></p>
     <div class="code_high">
-      <address><span class="dis_price">$17.50</span><span class="ori_price">$69.99</span></address>
-      <textarea readonly="readonly" class="code_area">75AXRNOS</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>75% off at $69.99</strong> with promo code: <strong class="m_codes">75AXRNOS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+      <address><span class="dis_price">$27.00</span><span class="ori_price">$89.99</span></address>
+      <textarea readonly="readonly" class="code_area">70NIRMJN</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $89.99</strong> with promo code: <strong class="m_codes">70NIRMJN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 25, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
   </div> 
-  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2y6gOgj">Use Code at Amazon</a></div>
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2JXohDU">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="23.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KdyrR9"><img src="https://m.media-amazon.com/images/I/61qvXQwah6L._SR400,400_.jpg" alt="DveeTech Dash Camera" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>79 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KdyrR9">DveeTech Dash Camera for Cars 1920x1080p【Super Night Vision】 3" IPS LCD FHD 1080P Screen 170°HDR/WDR G-Sensor Car Video...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$23.99</span><span class="ori_price">$39.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">40F5WKG6</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $39.99</strong> with promo code: <strong class="m_codes">40F5WKG6</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 29, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KdyrR9">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="21.69">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YdNkHV"><img src="https://m.media-amazon.com/images/I/61qTLphZ+bL._SR400,400_.jpg" alt="Screen Replacement" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>387 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YdNkHV">Screen Replacement Compatible iPhone 6S White 4.7inch Digitizer Repair LCD Replacement Kit Assembly</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.69</span><span class="ori_price">$30.99</span></address>
+      <textarea readonly="readonly" class="code_area">30T2QCCP</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $30.99</strong> with promo code: <strong class="m_codes">30T2QCCP</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YdNkHV">Use Code at Amazon</a></div>
 </div>
 
 <div class="card clearfix" data-score="50" data-price="8.00">
