--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -12,8 +12,8 @@ legend{display:none;}/* 숨김 */
 button{border:0;background:none;cursor:pointer;}
 table caption{display:none;}
 
-textarea.code_area{resize:none;font-size:20px;height:31px;text-align:center;border:1px solid #616161;}
-button.copycode{background:#000;color:#fff;font-size:17.5px;padding:5px;position:relative;top:-9px;}
+textarea.code_area{resize:none;font-size:20px;height:31px;text-align:center;border:1px solid #616161;vertical-align:middle;}
+button.copycode{background:#000;color:#fff;font-size:17.5px;padding:5px;vertical-align:middle;}
 @media screen and (max-width:640px){
   textarea.code_area, button.copycode{display:none;}
 }
