--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -26,6 +26,18 @@
                 <li></li>
               </ul>
             </li> -->
+            <li>
+              <a href="#n">HOW TO USE</a>
+              <ul>
+                <li class="about_db_dis">
+                  <p>What is "Extra Discount"?</p>
+                  <span class="double orange">Extra Discount</span>
+                  <em>You can get extra discount by applying promotional code to the product that is being discounting.</em>
+                  <span class="double purple">Extra Discount</span>
+                  <em>You can get discount with clipping coupon on the prodcut page.</em>
+                </li>
+              </ul>
+            </li>
             <li class="last7days bestdeals">
               <a href="#n">LAST 7 DAYS DAILY DEALS</a>
               <ul>
@@ -54,7 +66,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Daily Deals | We've Picked On Amazon Jul. 24. 2019.</h2>
+        <h2>Daily Deals | We've Picked On Amazon Jul. 26. 2019.</h2>
         
         <div class="sort_box clearfix">
           <!-- <div class="deals_des">We pick the best deals from all categories of Amazon!! We just hope you like it :D</div> -->
@@ -71,7 +83,7 @@
           <%= render 'shared/amz_search' %>
           <%= render 'deals/body_bestdeals' %>
         </div>
-        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_07">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
+        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_02">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
         
         
       </div><!--./rt_cnt-->    
