--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -32,9 +32,9 @@
                   <!-- <li>Proceed with payment then the code is automatically applied.</li> -->
                   <li class="about_db_dis">
                     <p>What is "Extra Discount"?</p>
-                    <span class="dou_red">Extra Discount</span>
+                    <span class="double red">Extra Discount</span>
                     <em>You can get extra discount by applying promotional code to the product that is being discounting.</em>
-                    <span class="dou_green">Extra Discount</span>
+                    <span class="double green">Extra Discount</span>
                     <em>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</em>
                   </li>
                 </ul>
@@ -67,7 +67,7 @@
         </div><!--./lt_cnt-->
         
         <div class="rt_cnt">
-          <h2>Promotion Codes | We've Picked On Amazon Jul. 24. 2019.</h2>
+          <h2>Promotion Codes | We've Picked On Amazon Jul. 26. 2019.</h2>
           
           <div class="sort_box clearfix">
             <ul>
@@ -99,7 +99,7 @@
  -->
             <%= render 'deals/body_promocode' %>
           </div>
-          <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_04">GO TO PROMO CODES OF YESTERDAY</a></h2>
+          <p class="updating">Promotional codes are still updating... :D <a href="/promocodes_days/day_06">GO TO PROMO CODES OF YESTERDAY</a></h2>
           
         </div><!--./rt_cnt-->    
 
