--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -15,8 +15,12 @@
   .codes .lt_cnt .last7days_pc>ul>li>a{text-decoration:none;color:#fff;display:block;font-size:15px;padding:5px 15px;background:#08f;margin:5px;border-radius:10px;}
   .codes .lt_cnt .bestdeals>ul>li>a{background:#87c442;}
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis{}
-  .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.dou_red{background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px;}
-  .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.dou_green{background:#87c442;color:#fff;padding:0 10px;border-radius:10px}
+  .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.double{color:#fff;padding:0 10px;border-radius:10px;}
+  .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.red{background:#ff4d4d;}
+  .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.green{background:#87c442;}
+  .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.orange{background:#e47911;}
+  .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>.purple{background:#b400b4;}
+  
   .codes .lt_cnt .toggle>ul>li>ul>.about_db_dis>em{display:block;padding:0 5px;margin-bottom:10px;}
 
   .codes .lt_cnt .today_code{padding:8px 0;background:#000;margin:5px 0;text-align:center;border-radius:10px;}
@@ -64,8 +68,9 @@
   .codes .card_wrap .card .inner>.code_high>address>.bestdeals{color:#87c442;}
   .codes .card_wrap .card .inner>.code_high>address>.amz_prime{color:#e47911;}
   .codes .card_wrap .card .inner>.code_high>address>.ori_price{color:#616161;font-size:15px;text-decoration:line-through;}
+
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_red{margin-left:10px;position:relative;display:inline;background:#ff4d4d;color:#fff;padding:0 10px;border-radius:10px;}
-  .codes .card_wrap .card .inner>.code_high>address>.tooltip_red>.tooltip-content{visibility:hidden;width:300px;background:#ff4d4d;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_red>.tooltip-content{visibility:hidden;width:400px;background:#ff4d4d;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_red:hover>.tooltip-content{visibility: visible;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_green{margin-left:10px;position:relative;display:inline;background:#87c442;color:#fff;padding:0 10px;border-radius:10px;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_green>.tooltip-content{visibility:hidden;width:400px;background:#87c442;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
@@ -73,6 +78,10 @@
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange{margin-left:10px;position:relative;display:inline;background:#e47911;color:#fff;padding:0 10px;border-radius:10px;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange>.tooltip-content{visibility:hidden;width:400px;background:#e47911;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
   .codes .card_wrap .card .inner>.code_high>address>.tooltip_orange:hover>.tooltip-content{visibility: visible;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_purple{margin-left:10px;position:relative;display:inline;background:#b400b4;color:#fff;padding:0 10px;border-radius:10px;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_purple>.tooltip-content{visibility:hidden;width:400px;background:#b400b4;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
+  .codes .card_wrap .card .inner>.code_high>address>.tooltip_purple:hover>.tooltip-content{visibility: visible;}
+
   .codes .card_wrap .card .inner>.code_high>em{font-size:12px;color:#616161;display:block;}
   .codes .card_wrap .card .inner>.code_high>p{color:#616161;font-size:13px;display:inline;/*border-bottom:0.4em solid rgba(51,51,255,0.2);position:relative;*/}
   .codes .card_wrap .card .inner>.code_high>.mobile_code{display:none;}
