--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -39,11 +39,199 @@
 
 <!-- Extra Discount
  <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
-
  <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
 
  <p>run out of stock soon</p>
 -->
+
+<div class="card clearfix" data-score="70" data-price="7.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30X39V4"><img src="https://m.media-amazon.com/images/I/71+vypuXprL._SR400,400_.jpg" alt="Cell Phone Stand" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,533 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30X39V4">Cell Phone Stand, LOBKIN Metal PhoneTablet Cradle, Holder, Stand,for iPhone 8 X 7 6 6s Plus 5 5s 5c Charging...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.20</span><span class="ori_price">$23.99</span></address>
+      <textarea readonly="readonly" class="code_area">7087D8V2</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $23.99</strong> with promo code: <strong class="m_codes">7087D8V2</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30X39V4">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="72" data-price="39.48">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SQrnxL"><img src="https://m.media-amazon.com/images/I/51OgK3IGMlL._SR400,400_.jpg" alt="Car Dash Cam" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>77 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>72% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SQrnxL">Car Dash Cam, Dashboard Camera Recorder with 32GB SD Card, MELCAM FHD 1080P, 3" LCD Screen, Driving Recorder...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$39.48</span><span class="ori_price">$140.99</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">727F29RX</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>72% off at $140.99</strong> with promo code: <strong class="m_codes">727F29RX</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2SQrnxL">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YgWC64"><img src="https://m.media-amazon.com/images/I/61hmtBg+NFL._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3.jpg' %>"><p>133 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YgWC64">Wireless Earbuds, Latest Bluetooth 5.0 True Wireless Bluetooth Headphones Wireless Earbuds, 3D Stereo Sound Wireless...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">50OFDE8Z</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $29.99</strong> with promo code: <strong class="m_codes">50OFDE8Z</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YgWC64">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="13.41">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YlkF3U"><img src="https://m.media-amazon.com/images/I/71laxcFRGZL._SR400,400_.jpg" alt="Janazan Waterproof iPhone XR Case" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>48 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YlkF3U">Janazan Waterproof iPhone XR Case, Full Sealed Underwater Protective Cover, Waterproof Shockproof Snowproof Dirtproof ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.41</span><span class="ori_price">$17.88</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">25NEIMBB</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>25% off at $17.88</strong> with promo code: <strong class="m_codes">25NEIMBB</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YlkF3U">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="4.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SG2HYn"><img src="https://m.media-amazon.com/images/I/61pSQm2A0AL._SR400,400_.jpg" alt="Moallia Phone Charger Cables" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>306 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SG2HYn">Moallia Phone Charger Cables, 2 Pack 6FT Extra Long Nylon Braided USB Fast Charging & Syncing Cord Compatible with...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.50</span><span class="ori_price">$8.99</span></address>
+      <textarea readonly="readonly" class="code_area">50GZTU7G</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $8.99</strong> with promo code: <strong class="m_codes">50GZTU7G</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2SG2HYn">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="14.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YmD6F9"><img src="https://m.media-amazon.com/images/I/5170jpJU5nL._SR400,400_.jpg" alt="20000mAh Portable Charger" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>180 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YmD6F9">20000mAh Portable Charger, Quick Charge 3.0 Dual Input Output Typec-C Port with LCD Display High Capacity Power Bank,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.39</span><span class="ori_price">$23.99</span>
+        <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">401WZXHN</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $23.99</strong> with promo code: <strong class="m_codes">401WZXHN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 26, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YmD6F9">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="21.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JVbSS1"><img src="https://m.media-amazon.com/images/I/811OanPpIzL._SR400,400_.jpg" alt="OMOTON Detachable Keyboard Case" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>21 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JVbSS1">OMOTON Detachable Keyboard Case for New iPad 9.7” 2018&2017, iPad Pro 9.7, iPad Air 1 / Air 2 9.7",...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.00</span><span class="ori_price">$41.99</span></address>
+      <textarea readonly="readonly" class="code_area">50NYA3SN</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $41.99</strong> with promo code: <strong class="m_codes">50NYA3SN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 30, 2019 at 06:00 AM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2JVbSS1">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="25.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30Zaeom"><img src="https://m.media-amazon.com/images/I/61b4IwnD-BL._SR400,400_.jpg" alt="Water Flosser" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>10 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30Zaeom">Water Flosser, Kealive Oral Irrigator with 3 Modes and 4 Tips, Portable Cordless Water Flosser with IPX7 Waterproof for...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.99</span><span class="ori_price">$39.99</span></address>
+      <textarea readonly="readonly" class="code_area">35VQUZ4S</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>35% off at $39.99</strong> with promo code: <strong class="m_codes">35VQUZ4S</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/30Zaeom">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="8.25">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SQteTf"><img src="https://m.media-amazon.com/images/I/71iJB-2eG9L._SR400,400_.jpg" alt="Dental Tools" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>58 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SQteTf">Dental Tools Stainless Steel Dental Pick Dental Floss Dental Hygiene Tool Set Tooth Scraper Plaque Tartar Remover Dental ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.25</span><span class="ori_price">$11.79</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <textarea readonly="readonly" class="code_area">30BWSF9P</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $11.79</strong> with promo code: <strong class="m_codes">30BWSF9P</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 26, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2SQteTf">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="5.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2SHg76q"><img src="https://m.media-amazon.com/images/I/6190bb35IVL._SR400,400_.jpg" alt="BEAKEY Makeup Brush Set" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>3,265 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2SHg76q">BEAKEY Makeup Brush Set, Premium Synthetic Kabuki Foundation Face Powder Blush Eyeshadow Brushes Makeup...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.49</span><span class="ori_price">$9.99</span></address>
+      <textarea readonly="readonly" class="code_area">4544YUEJ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $9.99</strong> with promo code: <strong class="m_codes">4544YUEJ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2SHg76q">Use Code at Amazon</a></div>
+</div>
 
 <div class="card clearfix" data-score="60" data-price="7.60">
   <div class="image_box">
