--- a/app/assets/stylesheets/blog.css.erb
+++ b/app/assets/stylesheets/blog.css.erb
@@ -1,6 +1,19 @@
 /*blog_03*/
-.memorial ul li a{text-transform:uppercase;}
-
+.blog_body{}
+.blog_body .school_box{border:2px solid #ccc;margin-bottom:50px;padding:15px;}
+.blog_body .school_box .left_side{float:left;width:30%;}
+.blog_body .school_box .left_side img{width:100%;}
+.blog_body .school_box .right_side{float:left;width:65%;margin-left:5%;}
+.blog_body .school_box .right_side h2{}
+.blog_body .school_box .right_side h2 a{color:#000;}
+.blog_body .school_box .right_side ul{margin:15px 0;}
+.blog_body .school_box .right_side ul h3{text-decoration:none;color:#000;}
+.blog_body .school_box .right_side ul li{list-style:disc;}
+.blog_body .school_box .right_side ul li a{text-decoration:none;color:#08f;}
+.blog_body .school_box .right_side ul li span{margin-left:10px;font-size:13px;}
+.blog_body .school_box .right_side ul li span em{margin-left:7px;text-decoration:line-through;color:#616161;}
+.blog_body .school_box .right_side .btn{margin-top:30px;}
+.blog_body .school_box .right_side .btn a{text-decoration:none;background:#000;padding:10px 20px;border-radius:10px;color:#fff;}
 /*blog_04*/
 .fourthjuly{}
 .fourthjuly ul{margin-top:30px;}
@@ -8,3 +21,4 @@
 .fourthjuly ul li a{font-size:20px;}
 .fourthjuly ul li a p{color:#616161;font-size:15px;text-transform:none;}
 .fourth_title{margin-bottom:-60px;display:block;text-align:center;}
+
