--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -66,7 +66,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Daily Deals | We've Picked On Amazon Jul. 26. 2019.</h2>
+        <h2>Daily Deals | Hand-Pick On Amazon Jul. 27. 2019.</h2>
         
         <div class="sort_box clearfix">
           <!-- <div class="deals_des">We pick the best deals from all categories of Amazon!! We just hope you like it :D</div> -->
@@ -83,7 +83,7 @@
           <%= render 'shared/amz_search' %>
           <%= render 'deals/body_bestdeals' %>
         </div>
-        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_02">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
+        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_03">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
         
         
       </div><!--./rt_cnt-->    
