--- a/app/views/blogs/blog_03_backtoschool.html.erb
+++ b/app/views/blogs/blog_03_backtoschool.html.erb
@@ -13,9 +13,7 @@
         </div>
 
         <div class="school_box clearfix">
-          <div class="left_side">
-            <a target="_blank" href="https://amzn.to/2LIQuSf"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Amazon_logo.svg/1280px-Amazon_logo.svg.png" alt="Image_Name"></a>
-          </div>
+          <div class="left_side"><a target="_blank" href="https://amzn.to/2LIQuSf">Amazon</a></div>
           <div class="right_side">
             <h2><a target="_blank" href="https://amzn.to/2LIQuSf">Save up to 56% on school supplies on Amazon.</a></h2>
             <ul>
@@ -45,9 +43,7 @@
         </div>
 
         <!-- <div class="school_box clearfix">
-          <div class="left_side">
-            <a target="_blank" href="Promotions_Link"><img src="Image_Link" alt="Image_Name"></a>
-          </div>
+          <div class="left_side"><a target="_blank" href="Promotions_Link">Store</a></div>
           <div class="right_side">
             <h2><a target="_blank" href="Promotions_Link">Promotions_Title</a></h2>
             <div class="btn"><a target="_blank" href="Promotions_Link">Shop Now</a></div>
@@ -55,9 +51,7 @@
         </div>       -->   
 
         <!-- <div class="school_box clearfix">
-          <div class="left_side">
-            <a target="_blank" href="Promotions_Link"><img src="Image_Link" alt="Image_Name"></a>
-          </div>
+          <div class="left_side"><a target="_blank" href="Promotions_Link">Store</a></div>
           <div class="right_side">
             <h2><a target="_blank" href="Promotions_Link">Promotions_Title</a></h2>
             <ul>
@@ -80,9 +74,7 @@
          -->     
 
         <div class="school_box clearfix">
-          <div class="left_side">
-            <a target="_blank" href="https://bit.ly/2ydLmg6"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/Target_Logo.svg/1280px-Target_Logo.svg.png" alt="Target back to school deals"></a>
-          </div>
+          <div class="left_side"><a target="_blank" href="https://bit.ly/2ydLmg6">Target</a></div>
           <div class="right_side">
             <h2><a target="_blank" href="https://bit.ly/2ydLmg6">Get up to 90% off select back-to-school items, 55% off backpacks, kids uniforms starting at $4 and more.</a></h2>
             <div class="btn"><a target="_blank" href="https://bit.ly/2ydLmg6">Shop Now</a></div>
@@ -90,9 +82,7 @@
         </div>   
 
         <div class="school_box clearfix">
-          <div class="left_side">
-            <a target="_blank" href="https://bit.ly/30XCLuf"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/New_Gap_logo.svg/1280px-New_Gap_logo.svg.png" alt="Gap back to school deals"></a>
-          </div>
+          <div class="left_side"><a target="_blank" href="https://bit.ly/30XCLuf">Gap</a></div>
           <div class="right_side">
             <h2><a target="_blank" href="https://bit.ly/30XCLuf">Online & In Store Back to School Favorites - 50% Off all Kids' & Baby | Uniforms, Backpacks, Tees & Shorts</a></h2>
             <div class="btn"><a target="_blank" href="https://bit.ly/30XCLuf">Shop Now</a></div>
@@ -100,9 +90,7 @@
         </div>    
 
         <div class="school_box clearfix">
-          <div class="left_side">
-            <a target="_blank" href="https://bit.ly/318rojx"><img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Kohl%27s.png" alt="store back to school deals"></a>
-          </div>
+          <div class="left_side"><a target="_blank" href="https://bit.ly/318rojx">Kohl's</a></div>
           <div class="right_side">
             <h2><a target="_blank" href="https://bit.ly/318rojx">Save Up to 70% off designer backpacks. Visit the Kohl’s Back to School page.</a></h2>
             <div class="btn"><a target="_blank" href="https://bit.ly/318rojx">Shop Now</a></div>
@@ -110,9 +98,7 @@
         </div>    
 
         <div class="school_box clearfix">
-          <div class="left_side">
-            <a target="_blank" href="https://bit.ly/32UGhHS"><img src="https://live.staticflickr.com/4711/39732358101_6528808e4a_b.jpg" alt="store back to school deals"></a>
-          </div>
+          <div class="left_side"><a target="_blank" href="https://bit.ly/32UGhHS">Nordstrom<br />Rack</a></div>
           <div class="right_side">
             <h2><a target="_blank" href="https://bit.ly/32UGhHS">Back to School Classics | Get up to 70% off backpacks.</a></h2>
             <div class="btn"><a target="_blank" href="https://bit.ly/32UGhHS">Shop Now</a></div>
@@ -120,14 +106,136 @@
         </div>    
 
         <div class="school_box clearfix">
-          <div class="left_side">
-            <a target="_blank" href="Promotions_Link"><img src="Image_Link" alt="store back to school deals"></a>
-          </div>
+          <div class="left_side"><a target="_blank" href="https://bit.ly/2yhXqNy">society6</a></div>
           <div class="right_side">
-            <h2><a target="_blank" href="Promotions_Link">Promotions_Title</a></h2>
-            <div class="btn"><a target="_blank" href="Promotions_Link">Shop Now</a></div>
+            <h2><a target="_blank" href="https://bit.ly/2yhXqNy">Students get 25% off entire purchase.</a></h2>
+            <div class="btn"><a target="_blank" href="https://bit.ly/2yhXqNy">Shop Now</a></div>
           </div>        
-        </div>               
+        </div>      
+
+        <div class="school_box clearfix">
+          <div class="left_side"><a target="_blank" href="https://bit.ly/2yiOxTT">Staples</a></div>
+          <div class="right_side">
+            <h2><a target="_blank" href="https://bit.ly/2yiOxTT">offering up to 40% off laptops and accessories plus mega discounts on supplies.</a></h2>
+            <div class="btn"><a target="_blank" href="https://bit.ly/2yiOxTT">Shop Now</a></div>
+          </div>        
+        </div>      
+
+       <div class="school_box clearfix">
+        <div class="left_side"><a target="_blank" href="https://bit.ly/32WxJjp">Erincondren</a></div>
+        <div class="right_side">
+          <h2><a target="_blank" href="https://bit.ly/32WxJjp">Take up to 20% off selected items</a></h2>
+          <div class="btn"><a target="_blank" href="https://bit.ly/32WxJjp">Shop Now</a></div>
+        </div>        
+       </div>   
+
+       <div class="school_box clearfix">
+        <div class="left_side"><a target="_blank" href="https://bit.ly/30VBcx5">Claires</a></div>
+        <div class="right_side">
+          <h2><a target="_blank" href="https://bit.ly/30VBcx5">Back to School sale | Take up to 50% off  diaries and notebooks</a></h2>
+          <div class="btn"><a target="_blank" href="https://bit.ly/30VBcx5">Shop Now</a></div>
+        </div>        
+       </div>   
+
+       <div class="school_box clearfix">
+        <div class="left_side"><a target="_blank" href="https://bit.ly/2yhZepO">Finish Line</a></div>
+        <div class="right_side">
+          <h2><a target="_blank" href="https://bit.ly/2yhZepO">back to school deals up to 60% off</a></h2>
+          <div class="btn"><a target="_blank" href="https://bit.ly/2yhZepO">Shop Now</a></div>
+        </div>        
+       </div>   
+
+       <div class="school_box clearfix">
+        <div class="left_side"><a target="_blank" href="https://bit.ly/2KcTGSO">Macy’s</a></div>
+        <div class="right_side">
+          <h2><a target="_blank" href="https://bit.ly/2KcTGSO">Kids Back to School Clothes Sale 2019</a></h2>
+          <div class="btn"><a target="_blank" href="https://bit.ly/2KcTGSO">Shop Now</a></div>
+        </div>        
+       </div>   
+
+       <div class="school_box clearfix">
+        <div class="left_side"><a target="_blank" href="https://bit.ly/2K14FP6">Best Buy</a></div>
+        <div class="right_side">
+          <h2><a target="_blank" href="https://bit.ly/2K14FP6">Save more on these laptops with Student Deals. Save an extra $50–$150 on one of these Windows laptops when you sign up for Student Deals.</a></h2>
+          <div class="btn"><a target="_blank" href="https://bit.ly/2K14FP6">Shop Now</a></div>
+        </div>        
+       </div>     
+
+       <div class="school_box clearfix">
+        <div class="left_side"><a target="_blank" href="https://bit.ly/32UpFzH">Walmart</a></div>
+        <div class="right_side">
+          <h2><a target="_blank" href="https://bit.ly/32UpFzH">Back to School Supplies on Sale Up to 50% Off</a></h2>
+          <div class="btn"><a target="_blank" href="https://bit.ly/32UpFzH">Shop Now</a></div>
+        </div>        
+       </div>     
+
+       <div class="school_box clearfix">
+        <div class="left_side"><a target="_blank" href="https://bit.ly/2yi9VIJ">Old Navy</a></div>
+        <div class="right_side">
+          <h2><a target="_blank" href="https://bit.ly/2yi9VIJ">BACK TO SCHOOL CLOTHES & OUTFITS 2019 </a></h2>
+          <div class="btn"><a target="_blank" href="https://bit.ly/2yi9VIJ">Shop Now</a></div>
+        </div>        
+       </div>     
+
+       <div class="school_box clearfix">
+        <div class="left_side"><a target="_blank" href="https://bit.ly/2K53yy5">Shoe Carnival</a></div>
+        <div class="right_side">
+          <h2><a target="_blank" href="https://bit.ly/2K53yy5">BACK TO SCHOOL SHOE SALE 2019</a></h2>
+          <div class="btn"><a target="_blank" href="https://bit.ly/2K53yy5">Shop Now</a></div>
+        </div>        
+       </div>   
+
+       <div class="school_box clearfix">
+        <div class="left_side"><a target="_blank" href="https://bit.ly/30Ylnpm">Lenovo</a></div>
+        <div class="right_side">
+          <h2><a target="_blank" href="https://bit.ly/30Ylnpm">Save up to 37% on ThinkPad laptops.</a></h2>
+          <div class="btn"><a target="_blank" href="https://bit.ly/30Ylnpm">Shop Now</a></div>
+        </div>        
+       </div>   
+
+       <div class="school_box clearfix">
+        <div class="left_side"><a target="_blank" href="https://bit.ly/32UfivZ">Dell</a></div>
+        <div class="right_side">
+          <h2><a target="_blank" href="https://bit.ly/32UfivZ">Back to School Sale 2019 | Laptop, Desktop & Electronics Deals</a></h2>
+          <div class="btn"><a target="_blank" href="https://bit.ly/32UfivZ">Shop Now</a></div>
+        </div>        
+       </div>   
+
+       <div class="school_box clearfix">
+        <div class="left_side"><a target="_blank" href="https://bit.ly/30ZSbyk">Apple</a></div>
+        <div class="right_side">
+          <h2><a target="_blank" href="https://bit.ly/30ZSbyk">Buy a Mac or iPad for college. Get Beats.</a></h2>
+          <div class="btn"><a target="_blank" href="https://bit.ly/30ZSbyk">Shop Now</a></div>
+        </div>        
+       </div>     
+
+       <div class="school_box clearfix">
+        <div class="left_side"><a target="_blank" href="https://bit.ly/2Kb00KR">Pottery Barn Kids</a></div>
+        <div class="right_side">
+          <h2><a target="_blank" href="https://bit.ly/2Kb00KR">Back to school event 25% off your order with code: LEARN</a></h2>
+          <div class="btn"><a target="_blank" href="https://bit.ly/2Kb00KR">Shop Now</a></div>
+        </div>        
+       </div>     
+
+       <div class="school_box clearfix">
+        <div class="left_side"><a target="_blank" href="https://bit.ly/32Uq7xT">Shop Disney</a></div>
+        <div class="right_side">
+          <h2><a target="_blank" href="https://bit.ly/32Uq7xT">Up to 25% Off Select Back To School Essentials</a></h2>
+          <div class="btn"><a target="_blank" href="https://bit.ly/32Uq7xT">Shop Now</a></div>
+        </div>        
+       </div>     
+
+       <div class="school_box clearfix">
+        <div class="left_side"><a target="_blank" href="Promotions_Link">Store</a></div>
+        <div class="right_side">
+          <h2><a target="_blank" href="Promotions_Link">Promotions_Title</a></h2>
+          <div class="btn"><a target="_blank" href="Promotions_Link">Shop Now</a></div>
+        </div>        
+       </div>     
+
+
+
+
 
       </div><!--./blog_body-->
 
