--- a/app/assets/stylesheets/blog.css.erb
+++ b/app/assets/stylesheets/blog.css.erb
@@ -1,14 +1,15 @@
 /*blog_03*/
 .blog_body{}
 .blog_body .school_box{border:2px solid #ccc;margin-bottom:50px;padding:15px;}
-.blog_body .school_box .left_side{float:left;width:30%;}
+.blog_body .school_box .left_side{float:left;width:30%;font-family: 'Anton', sans-serif;}
+.blog_body .school_box .left_side a{background:#000;color:#fff;padding:30px 30px;display:block;text-decoration:none;text-align:center;font-size:30px;font-weight:bold;}
 .blog_body .school_box .left_side img{width:100%;}
-.blog_body .school_box .right_side{float:left;width:65%;margin-left:5%;}
+.blog_body .school_box .right_side{float:left;width:65%;margin-left:3%;}
 .blog_body .school_box .right_side h2{}
 .blog_body .school_box .right_side h2 a{color:#000;}
 .blog_body .school_box .right_side ul{margin:15px 0;}
 .blog_body .school_box .right_side ul h3{text-decoration:none;color:#000;}
-.blog_body .school_box .right_side ul li{list-style:disc;}
+.blog_body .school_box .right_side ul li{list-style:disc;margin-left:25px;}
 .blog_body .school_box .right_side ul li a{text-decoration:none;color:#08f;}
 .blog_body .school_box .right_side ul li span{margin-left:10px;font-size:13px;}
 .blog_body .school_box .right_side ul li span em{margin-left:7px;text-decoration:line-through;color:#616161;}
